sacsvt21/data/creduce/creduce_n/482/swarm/r1/cb0/6331.c-482-0.err
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r1/cb0/6331.c: In function ‘func_87’:
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r1/cb0/6331.c:1056:1: error: unrecognizable insn:
 }
 ^
(insn 2058 2057 2059 220 (set (reg:QI 1253)
        (const_int 178 [0xb2])) /project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r1/cb0/6331.c:965 -1
     (nil))
/project/alipour/rabin/kconfig/data/creduce_n/482/swarm/r1/cb0/6331.c:1056:1: internal compiler error: in extract_insn, at recog.c:2154
0xc05df8 _fatal_insn(char const*, rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:109
0xc05e4b _fatal_insn_not_found(rtx_def const*, char const*, int, char const*)
	../../gcc/rtl-error.c:117
0xb8b99a extract_insn(rtx_def*)
	../../gcc/recog.c:2154
0x8fec83 instantiate_virtual_regs_in_insn
	../../gcc/function.c:1561
0x90088c instantiate_virtual_regs
	../../gcc/function.c:1928
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
